syntax = "proto3";

option go_package = "discord/gen/proto/service/dm";

package protoservice.dm;

service DirectMessageService {
  // DM Channel Management
  rpc CreateDMChannel(CreateDMChannelRequest) returns (CreateDMChannelResponse);
  rpc CreateGroupDM(CreateGroupDMRequest) returns (CreateGroupDMResponse);
  rpc GetDMChannel(GetDMChannelRequest) returns (GetDMChannelResponse);
  rpc GetUserDMChannels(GetUserDMChannelsRequest) returns (GetUserDMChannelsResponse);
  rpc CloseDMChannel(CloseDMChannelRequest) returns (CloseDMChannelResponse);
  
  // Group DM Management
  rpc AddUserToGroupDM(AddUserToGroupDMRequest) returns (AddUserToGroupDMResponse);
  rpc RemoveUserFromGroupDM(RemoveUserFromGroupDMRequest) returns (RemoveUserFromGroupDMResponse);
  rpc UpdateGroupDM(UpdateGroupDMRequest) returns (UpdateGroupDMResponse);
  
  // Message Management
  rpc SendDM(SendDMRequest) returns (SendDMResponse);
  rpc GetDMMessages(GetDMMessagesRequest) returns (stream GetDMMessagesResponse);
  rpc EditDM(EditDMRequest) returns (EditDMResponse);
  rpc DeleteDM(DeleteDMRequest) returns (DeleteDMResponse);
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
}

// DM Channel Messages
message CreateDMChannelRequest {
  int32 user_id = 1;
  int32 recipient_id = 2;
}

message CreateDMChannelResponse {
  int32 dm_channel_id = 1;
  bool success = 2;
}

message CreateGroupDMRequest {
  int32 owner_id = 1;
  repeated int32 user_ids = 2;
  string name = 3;
}

message CreateGroupDMResponse {
  int32 dm_channel_id = 1;
  bool success = 2;
}

message GetDMChannelRequest {
  int32 dm_channel_id = 1;
}

message GetDMChannelResponse {
  int32 id = 1;
  repeated int32 participant_ids = 2;
  string name = 3;
  string icon = 4;
}

message GetUserDMChannelsRequest {
  int32 user_id = 1;
}

message GetUserDMChannelsResponse {
  repeated DMChannelInfo channels = 1;
}

message DMChannelInfo {
  int32 id = 1;
  repeated int32 participant_ids = 2;
  string name = 3;
  string icon = 4;
  int32 last_message_id = 5;
  int64 last_message_at = 6;
  int32 unread_count = 7;
}

message CloseDMChannelRequest {
  int32 dm_channel_id = 1;
  int32 user_id = 2;
}

message CloseDMChannelResponse {
  bool success = 1;
}

// Group DM Messages
message AddUserToGroupDMRequest {
  int32 dm_channel_id = 1;
  int32 user_id = 2;
}

message AddUserToGroupDMResponse {
  bool success = 1;
}

message RemoveUserFromGroupDMRequest {
  int32 dm_channel_id = 1;
  int32 user_id = 2;
}

message RemoveUserFromGroupDMResponse {
  bool success = 1;
}

message UpdateGroupDMRequest {
  int32 dm_channel_id = 1;
  string name = 2;
  string icon = 3;
}

message UpdateGroupDMResponse {
  bool success = 1;
}

// Message Messages
message SendDMRequest {
  int32 dm_channel_id = 1;
  int32 sender_id = 2;
  string content = 3;
  int32 reply_to_message_id = 4;
  repeated string attachments = 5; // URLs or base64
}

message SendDMResponse {
  int32 message_id = 1;
  int64 created_at = 2;
  bool success = 3;
}

message GetDMMessagesRequest {
  int32 dm_channel_id = 1;
  int32 limit = 2;
  int32 before_message_id = 3;
}

message GetDMMessagesResponse {
  int32 id = 1;
  int32 sender_id = 2;
  string content = 3;
  bool is_read = 4;
  bool is_edited = 5;
  int64 created_at = 6;
}

message EditDMRequest {
  int32 message_id = 1;
  string content = 2;
}

message EditDMResponse {
  bool success = 1;
}

message DeleteDMRequest {
  int32 message_id = 1;
}

message DeleteDMResponse {
  bool success = 1;
}

message MarkAsReadRequest {
  int32 dm_channel_id = 1;
  int32 user_id = 2;
  int32 message_id = 3;
}

message MarkAsReadResponse {
  bool success = 1;
}
